--- a/debian/build-module-packages.sh.in
+++ b/debian/build-module-packages.sh.in
@@ -5,7 +5,7 @@ test -x /usr/bin/module-assistant || apt-get install module-assistant
 cd /usr/src
 
 kernels="$(ls -d1 /lib/modules/*/build 2>/dev/null | cut -d/ -f4)"
-modules=nvidia-kernel#LEGACY#
+modules=#NVIDIA#-kernel
 
 module-assistant clean $modules
 module-assistant build --text-mode --force --kvers-list "$kernels" $modules
