--- a/debian/control
+++ b/debian/control
@@ -187,7 +187,7 @@ Description: allows the selection of NVIDIA as GLX provider
  In order to install the NVIDIA driver and libraries, install the
  ${nvidia}-driver package instead.
 
-#Package: nvidia-kernel${nvidia:Legacy}-dkms
+#Package: ${nvidia}-kernel-dkms
 Package: nvidia-kernel-dkms
 Section: non-free/kernel
 Architecture: i386 amd64
@@ -222,10 +222,10 @@ Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
  .
  ${nvidia:Models}
  .
- See /usr/share/doc/nvidia-kernel${nvidia:Legacy}-dkms/README.txt.gz
+ See /usr/share/doc/${nvidia}-kernel-dkms/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
-#Package: nvidia-kernel${nvidia:Legacy}-source
+#Package: ${nvidia}-kernel-source
 Package: nvidia-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64
@@ -254,13 +254,13 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
  using NVIDIA chip sets.  AGP, PCIe, SLI, TV-out and flat panel displays
  are also supported.
  .
- PLEASE read /usr/share/doc/nvidia-kernel${nvidia:Legacy}-source/README.Debian.gz
+ PLEASE read /usr/share/doc/${nvidia}-kernel-source/README.Debian.gz
  for building information.  If you want the kernel module to be automatically
- installed via DKMS, install nvidia-kernel${nvidia:Legacy}-dkms instead.
+ installed via DKMS, install ${nvidia}-kernel-dkms instead.
  .
  ${nvidia:Models}
  .
- See /usr/share/doc/nvidia-kernel${nvidia:Legacy}-source/README.txt.gz
+ See /usr/share/doc/${nvidia}-kernel-source/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
 Package: nvidia-vdpau-driver
