--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -66,7 +66,7 @@ binary-arch: build-stamp
 	dh_installdeb
 	dh_gencontrol -- -v`cat debian/VERSION` \
 		-V'built:using:kernel=$(call get_built_using,linux-headers-$(KVERS))' \
-		-V'built:using:nvidia=$(call get_built_using,nvidia-kernel#LEGACY#-source)'
+		-V'built:using:nvidia=$(call get_built_using,#NVIDIA#-kernel-source)'
 	dh_md5sums
 	dh_builddeb --destdir=$(KPKG_DEST_DIR)
 
