rename the kernel module
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3986 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -1,7 +1,7 @@
 # DKMS configuration for the NVIDIA kernel module.  -*- sh -*-
 
 # The version is replaced at build time by dh_dkms invoked in debian/rules.
-PACKAGE_NAME="nvidia"
+PACKAGE_NAME="#MODULE#"
 PACKAGE_VERSION="#MODULE_VERSION#"
 
 BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
