--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -178,6 +178,28 @@ fi
 		else
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite.";
 		fi;
+	elif grep -q "jessie\|^8" /etc/debian_version
+	then
+		if [[ -n ${VERSIONS[999]} ]]; then
+			if [[ -n ${VERSIONS[173]} ]]; then
+				if [[ -n ${VERSIONS[96]} ]]; then
+				       	echo "Your card is supported by all driver versions."
+				else
+					echo "Your card is supported by the default drivers and version 173."
+				fi
+			else
+				echo "Your card is supported by the default drivers."
+			fi
+			PACKAGE="nvidia-driver"
+		elif [[ -n ${VERSIONS[173]} ]]; then
+			echo "Your card is only supported up to the 173.14 legacy drivers series."
+			PACKAGE="nvidia-legacy-173xx-driver"
+		elif [[ -n ${VERSIONS[96]} ]]; then
+			echo "Your card is only supported up to the 96.43 legacy drivers series."
+			PACKAGE="nvidia-legacy-96xx-driver"
+		else
+			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
+		fi
 	elif grep -q "^4" /etc/debian_version;
 	then
 		echo "Uh oh. You are running Etch, which is no longer supported.";
