drop dependency versioning if satisfied in oldstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3992 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,6 @@ Package: nvidia-driver
 Section: non-free/x11
 Architecture: i386 amd64
 Pre-Depends:
- dpkg (>= 1.15.7.2),
  nvidia-installer-cleanup,
 Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
@@ -232,7 +231,7 @@ Architecture: i386 amd64
 Depends:
  debhelper (>= 8),
  make,
- quilt (>= 0.46-7~),
+ quilt,
  xz-utils,
  ${misc:Depends}
 Recommends:
