--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -3,7 +3,7 @@ Section: non-free/kernel
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
 Uploaders: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 8), quilt (>= 0.46-7~)
+Build-Depends: debhelper (>= 8), quilt
 Standards-Version: 3.9.0
 Homepage: http://www.nvidia.com/
 
