--- a/debian/nvidia-alternative.triggers.in
+++ b/debian/nvidia-alternative.triggers.in
@@ -3,3 +3,4 @@ interest register-nvidia-alternative#LEGACY#
 interest /usr/lib/#PRIVATE#
 interest /usr/lib/i386-linux-gnu/#PRIVATE#
 interest /usr/lib/x86_64-linux-gnu/#PRIVATE#
+interest /usr/lib/arm-linux-gnueabihf/#PRIVATE#
