--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,7 @@ Depends:
  libxvmcnvidia1 (= ${binary:Version}),
  xserver-xorg-video-${nvidia} (= ${binary:Version}),
  nvidia-vdpau-driver (= ${binary:Version}),
- nvidia-alternative${nvidia:Legacy} (= ${binary:Version}),
+ ${nvidia-alternative} (= ${binary:Version}),
  ${nvidia:kmod:binary},
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
@@ -79,7 +79,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
- nvidia-alternative${nvidia:Legacy} (= ${binary:Version}),
+ ${nvidia-alternative} (= ${binary:Version}),
  nvidia-support (>= 20120630),
  ${nvidia:xorgDepends},
  ${shlibs:Depends}, ${misc:Depends}
@@ -114,7 +114,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
  ${misc:Pre-Depends}
 Depends:
- nvidia-alternative${nvidia:Legacy},
+ ${nvidia-alternative},
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
@@ -150,7 +150,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
  ${misc:Pre-Depends}
 Depends:
- nvidia-alternative${nvidia:Legacy},
+ ${nvidia-alternative},
  libgl1-${nvidia}-glx (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary XvMC library${nvidia:LegacyDesc}
@@ -160,7 +160,7 @@ Description: NVIDIA binary XvMC library${nvidia:LegacyDesc}
  See /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for instructions how to enable XvMC acceleration.
 
-#Package: nvidia-alternative${nvidia:Legacy}
+#Package: ${nvidia-alternative}
 Package: nvidia-alternative
 Architecture: i386 amd64
 Multi-Arch: foreign
