--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ XORG_BOUND		?=
 MULTIARCH		?=
 BACKPORT		?=
 NVIDIA_SETTINGS		?= nvidia-settings$(legacy)
-NVIDIA_ALTERNATIVE	?= nvidia-alternative$(legacy)
+NVIDIA_ALTERNATIVE	?= nvidia$(legacy)-alternative
 version			 = $(NVIDIA_RELEASE)
 version_major		 = $(firstword $(subst ., ,$(version)))
 nvidia			 = nvidia$(legacy)
