--- a/debian/control
+++ b/debian/control
@@ -174,6 +174,8 @@ Conflicts:
 Breaks:
  nvidia-settings (<< 304.88-2),
  nvidia-settings-legacy-173xx (<< 173.14.37),
+Provides:
+ ${nvidia-alternative}--kmod-alias,
 Description: allows the selection of NVIDIA as GLX provider
  .
  In setups with several NVIDIA driver versions installed (e.g. current and
@@ -196,6 +198,7 @@ Pre-Depends:
 Depends:
  dkms,
  nvidia-kernel-common (>= 20110213),
+ ${nvidia-alternative}--kmod-alias,
  ${misc:Depends}
 Recommends:
  ${nvidia}-driver (>= ${nvidia:Version}),
@@ -237,6 +240,7 @@ Depends:
 Recommends:
  module-assistant | kernel-package,
  nvidia-kernel-common,
+ ${nvidia-alternative}--kmod-alias,
 Suggests:
  ${nvidia}-driver (>= ${nvidia:Version}),
 Breaks:
