--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -10,7 +10,9 @@ Homepage: http://www.nvidia.com/
 Package: #NVIDIA#-kernel-#KVERS#
 Architecture: i386 amd64
 Provides: nvidia-kernel-#VERSION#
-Depends: nvidia-kernel-common (>= 20110213)
+Depends:
+ nvidia-kernel-common (>= 20110213),
+ #NVIDIA_ALTERNATIVE#--kmod-alias,
 Recommends: linux-image-#KVERS#
 Built-Using: ${built:using:kernel}, ${built:using:nvidia}
 Description: NVIDIA binary kernel module for Linux #KVERS#
