stop shipping libOpenCL.so
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4051 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -477,6 +477,8 @@ Provides:
 Conflicts:
  libopencl1,
  nvidia-libopencl1-ia32,
+Breaks:
+ nvidia-opencl-dev (<= 5.0.35-6),
 Replaces:
  libopencl1,
  nvidia-libopencl1-ia32,
