add a file-lists target (maintainer use only)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4075 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -334,6 +334,11 @@ pci.ids.nvidia: /usr/share/misc/pci.ids
 		grep ^$$id pci.ids.nvidia || echo $$id ; \
 	done > $@
 
+# only invoked manually
+file-lists: $(patsubst %,debian/files_$(NVIDIA_RELEASE)_%,$(ARCH_LIST))
+debian/files_$(NVIDIA_RELEASE)_%: NVIDIA-Linux-%
+	(cd $< && find .) | sed 's/$(NVIDIA_RELEASE)/VERSION/g' | sort > $@
+
 ############################################################################
 
 PASV	?= --pasv
