--- a/debian/control
+++ b/debian/control
@@ -489,7 +489,7 @@ Description: NVIDIA OpenCL ICD Loader library
 
 Package: nvidia-detect
 Section: non-free/x11
-Architecture: i386 amd64
+Architecture: i386 amd64 armhf
 Depends:
  pciutils,
  ${shlibs:Depends}, ${misc:Depends}
