--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -4,7 +4,8 @@
 PACKAGE_NAME="#MODULE#"
 PACKAGE_VERSION="#MODULE_VERSION#"
 
-BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
+BUILT_MODULE_NAME[0]="nvidia"
+DEST_MODULE_NAME[0]="$PACKAGE_NAME"
 DEST_MODULE_LOCATION[0]="/updates/dkms"
 AUTOINSTALL=yes
 
