make libopencl1 installation more deterministic
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4120 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -441,7 +441,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  nvidia-opencl-common (= ${binary:Version}),
- libopencl1,
+ ocl-icd-libopencl1 | nvidia-libopencl1 | libopencl1,
  libnvidia-compiler (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Enhances:
