--- a/debian/control
+++ b/debian/control
@@ -150,7 +150,7 @@ Conflicts:
  libglx-nvidia-alternatives,
  libgl1-nvidia-alternatives-ia32,
 Breaks:
- nvidia-settings (<< 304.88-2),
+ nvidia-settings (<< 310.51),
  nvidia-settings-legacy-173xx (<< 173.14.37),
 Provides:
  ${nvidia-alternative}--kmod-alias,
