--- a/debian/control
+++ b/debian/control
@@ -126,6 +126,7 @@ Conflicts:
  nvidia-glx${nvidia:Legacy}-ia32,
  libgl1-nvidia-glx-ia32-any,
 Breaks:
+ libgl1-nvidia-legacy-304xx-glx (>= ${nvidia:Version}),
  ia32-libs (<< 1:0),
 Replaces:
  libgl1-nvidia${nvidia:Legacy}-glx-ia32,
