prepare for some more renaming
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4202 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -56,7 +56,7 @@ binary-arch: build-stamp
 	dh_testroot
 	dh_installdirs
 	dh_install
-	dh_installdocs $(wildcard debian/changelog.nvidia-kernel*-source*)
+	dh_installdocs $(wildcard debian/changelog.nvidia*-kernel*-source*)
 	dh_installchangelogs NVIDIA_Changelog
 	dh_installmodules
 	dh_bugfiles
